erDiagram
    GPU_MODELS {
        VARCHAR2_20 MODEL_ID PK
        VARCHAR2_50 MODEL_NAME
        VARCHAR2_20 MANUFACTURER
        VARCHAR2_30 ARCHITECTURE
        NUMBER_3 MEMORY_GB
        NUMBER_6 CUDA_CORES
        NUMBER_4 TENSOR_CORES
        NUMBER_4 RT_CORES
        NUMBER_5 BASE_CLOCK_MHZ
        NUMBER_5 BOOST_CLOCK_MHZ
        NUMBER_6_1 MEMORY_BANDWIDTH_GBPS
        VARCHAR2_20 MEMORY_TYPE
        NUMBER_4 POWER_CONSUMPTION_W
        VARCHAR2_10 PCIE_GENERATION
        CHAR_1 MIG_SUPPORT
        NUMBER_2 MAX_MIG_INSTANCES
        VARCHAR2_10 COMPUTE_CAPABILITY
        NUMBER_4 RELEASE_YEAR
        VARCHAR2_20 MARKET_SEGMENT
        DATE END_OF_LIFE_DATE
        DATE CREATED_DATE
        DATE UPDATED_DATE
    }

    GPU_NODES {
        VARCHAR2_50 NODE_ID PK
        VARCHAR2_100 NODE_NAME
        VARCHAR2_50 CLUSTER_NAME
        VARCHAR2_15 NODE_IP
        NUMBER_3 TOTAL_GPUS
        NUMBER_3 AVAILABLE_GPUS
        VARCHAR2_20 NODE_STATUS
        VARCHAR2_20 KUBERNETES_VERSION
        VARCHAR2_20 DOCKER_VERSION
        VARCHAR2_20 NVIDIA_DRIVER_VERSION
        CLOB NODE_LABELS
        CLOB TAINTS
        DATE CREATED_DATE
        DATE UPDATED_DATE
    }

    GPU_DEVICES {
        VARCHAR2_50 DEVICE_ID PK
        VARCHAR2_50 NODE_ID FK
        VARCHAR2_20 MODEL_ID FK
        NUMBER_2 DEVICE_INDEX
        VARCHAR2_50 SERIAL_NUMBER
        VARCHAR2_20 PCI_ADDRESS
        VARCHAR2_100 GPU_UUID
        VARCHAR2_20 DEVICE_STATUS
        NUMBER_5_2 CURRENT_TEMP_C
        NUMBER_5_2 MAX_TEMP_C
        NUMBER_6_2 CURRENT_POWER_W
        NUMBER_6_2 MAX_POWER_W
        VARCHAR2_20 DRIVER_VERSION
        VARCHAR2_20 FIRMWARE_VERSION
        VARCHAR2_20 VBIOS_VERSION
        DATE INSTALLATION_DATE
        DATE LAST_MAINTENANCE_DATE
        DATE WARRANTY_EXPIRY_DATE
        NUMBER_10_2 PURCHASE_COST
        NUMBER_3 DEPRECIATION_MONTHS
        DATE CREATED_DATE
        DATE UPDATED_DATE
    }

    MIG_PROFILES {
        VARCHAR2_20 PROFILE_ID PK
        VARCHAR2_20 MODEL_ID FK
        VARCHAR2_50 PROFILE_NAME
        NUMBER_2 COMPUTE_SLICES
        NUMBER_2 MEMORY_SLICES
        NUMBER_3 MEMORY_GB
        NUMBER_2 MAX_INSTANCES_PER_GPU
        NUMBER_4_2 PERFORMANCE_RATIO
        VARCHAR2_100 USE_CASE
        VARCHAR2_200 DESCRIPTION
        DATE CREATED_DATE
    }

    MIG_INSTANCES {
        VARCHAR2_50 MIG_ID PK
        VARCHAR2_50 DEVICE_ID FK
        VARCHAR2_20 PROFILE_ID FK
        NUMBER_2 INSTANCE_ID
        VARCHAR2_100 MIG_UUID
        CHAR_1 ALLOCATED
        VARCHAR2_20 INSTANCE_STATUS
        DATE CREATED_DATE
        DATE ALLOCATED_DATE
        DATE LAST_USED_DATE
    }

    GPU_ALLOCATIONS {
        VARCHAR2_50 ALLOCATION_ID PK
        VARCHAR2_50 NAMESPACE
        VARCHAR2_100 POD_NAME
        VARCHAR2_100 CONTAINER_NAME
        VARCHAR2_30 WORKLOAD_TYPE
        VARCHAR2_20 RESOURCE_TYPE
        VARCHAR2_50 ALLOCATED_RESOURCE
        NUMBER_3 REQUESTED_MEMORY_GB
        NUMBER_3 ALLOCATED_MEMORY_GB
        VARCHAR2_20 PRIORITY_CLASS
        DATE ALLOCATION_TIME
        DATE PLANNED_RELEASE_TIME
        DATE RELEASE_TIME
        VARCHAR2_20 STATUS
        NUMBER_8_4 COST_PER_HOUR
        NUMBER_10_2 TOTAL_COST
        VARCHAR2_50 USER_ID
        VARCHAR2_50 TEAM_ID
        VARCHAR2_50 PROJECT_ID
        DATE CREATED_DATE
        DATE UPDATED_DATE
    }

    GPU_USAGE_METRICS {
        VARCHAR2_50 METRIC_ID PK
        VARCHAR2_50 DEVICE_ID FK
        VARCHAR2_50 MIG_ID FK
        VARCHAR2_50 ALLOCATION_ID FK
        NUMBER_5_2 GPU_UTILIZATION_PCT
        NUMBER_8 MEMORY_USED_MB
        NUMBER_8 MEMORY_TOTAL_MB
        NUMBER_5_2 MEMORY_UTILIZATION_PCT
        NUMBER_5_2 TEMPERATURE_C
        NUMBER_6_2 POWER_DRAW_W
        NUMBER_5_2 FAN_SPEED_PCT
        NUMBER_5 CLOCK_GRAPHICS_MHZ
        NUMBER_5 CLOCK_MEMORY_MHZ
        NUMBER_8_2 PCIE_TX_MBPS
        NUMBER_8_2 PCIE_RX_MBPS
        NUMBER_3 PROCESSES_COUNT
        DATE TIMESTAMP
        VARCHAR2_20 COLLECTION_SOURCE
    }

    GPU_COMPATIBILITY {
        VARCHAR2_50 COMPAT_ID PK
        VARCHAR2_20 MODEL_ID FK
        VARCHAR2_10 CUDA_VERSION
        VARCHAR2_20 DRIVER_MIN_VERSION
        VARCHAR2_20 DRIVER_MAX_VERSION
        VARCHAR2_20 KUBERNETES_VERSION
        VARCHAR2_20 CONTAINER_RUNTIME
        VARCHAR2_20 OS_TYPE
        VARCHAR2_50 OS_VERSION
        CHAR_1 SUPPORTED
        NUMBER_5_2 PERFORMANCE_IMPACT_PCT
        CLOB KNOWN_ISSUES
        CLOB WORKAROUNDS
        DATE TESTED_DATE
        VARCHAR2_500 NOTES
        DATE CREATED_DATE
    }

    GPU_BENCHMARKS {
        VARCHAR2_50 BENCHMARK_ID PK
        VARCHAR2_20 MODEL_ID FK
        VARCHAR2_30 BENCHMARK_TYPE
        VARCHAR2_50 BENCHMARK_NAME
        NUMBER_12_2 SCORE
        VARCHAR2_20 SCORE_UNIT
        NUMBER_4 BATCH_SIZE
        VARCHAR2_10 PRECISION
        VARCHAR2_20 FRAMEWORK
        NUMBER_6_2 TEST_DURATION_MINUTES
        DATE TEST_DATE
        VARCHAR2_200 TEST_ENVIRONMENT
        CLOB HARDWARE_CONFIG
        CLOB SOFTWARE_CONFIG
        VARCHAR2_500 NOTES
        DATE CREATED_DATE
    }

    WORKLOAD_PROFILES {
        VARCHAR2_50 PROFILE_ID PK
        VARCHAR2_100 WORKLOAD_NAME
        VARCHAR2_30 WORKLOAD_TYPE
        NUMBER_3 MIN_MEMORY_GB
        NUMBER_3 PREFERRED_MEMORY_GB
        VARCHAR2_10 MIN_COMPUTE_CAPABILITY
        VARCHAR2_200 PREFERRED_ARCHITECTURES
        CHAR_1 REQUIRES_MIG
        NUMBER_2 MAX_SHARING_RATIO
        CLOB PERFORMANCE_REQUIREMENTS
        CLOB RESOURCE_CONSTRAINTS
        VARCHAR2_10 COST_SENSITIVITY
        CLOB SLA_REQUIREMENTS
        VARCHAR2_500 DESCRIPTION
        VARCHAR2_50 CREATED_BY
        DATE CREATED_DATE
        DATE UPDATED_DATE
    }

    ALERT_RULES {
        VARCHAR2_50 RULE_ID PK
        VARCHAR2_100 RULE_NAME
        VARCHAR2_30 RULE_TYPE
        VARCHAR2_20 TARGET_TYPE
        VARCHAR2_200 TARGET_FILTER
        NUMBER_10_2 THRESHOLD_VALUE
        VARCHAR2_10 THRESHOLD_OPERATOR
        VARCHAR2_10 SEVERITY
        NUMBER_4 EVALUATION_INTERVAL_MINUTES
        VARCHAR2_200 NOTIFICATION_CHANNELS
        CHAR_1 ENABLED
        DATE CREATED_DATE
        DATE UPDATED_DATE
    }

    SYSTEM_ALERTS {
        VARCHAR2_50 ALERT_ID PK
        VARCHAR2_50 RULE_ID FK
        VARCHAR2_30 ALERT_TYPE
        VARCHAR2_10 SEVERITY
        VARCHAR2_20 TARGET_TYPE
        VARCHAR2_50 TARGET_ID
        VARCHAR2_500 MESSAGE
        CLOB DETAILS
        NUMBER_10_2 METRIC_VALUE
        NUMBER_10_2 THRESHOLD_VALUE
        VARCHAR2_20 STATUS
        DATE CREATED_DATE
        DATE ACKNOWLEDGED_DATE
        VARCHAR2_50 ACKNOWLEDGED_BY
        DATE RESOLVED_DATE
        VARCHAR2_50 RESOLVED_BY
    }

    %% 관계 정의
    GPU_NODES ||--o{ GPU_DEVICES : "has"
    GPU_MODELS ||--o{ GPU_DEVICES : "model_of"
    GPU_MODELS ||--o{ MIG_PROFILES : "supports"
    GPU_MODELS ||--o{ GPU_COMPATIBILITY : "compatible_with"
    GPU_MODELS ||--o{ GPU_BENCHMARKS : "benchmarked_on"
    
    GPU_DEVICES ||--o{ MIG_INSTANCES : "partitioned_into"
    MIG_PROFILES ||--o{ MIG_INSTANCES : "instantiated_as"
    
    GPU_DEVICES ||--o{ GPU_USAGE_METRICS : "monitored_by"
    MIG_INSTANCES ||--o{ GPU_USAGE_METRICS : "monitored_by"
    GPU_ALLOCATIONS ||--o{ GPU_USAGE_METRICS : "tracked_by"
    
    ALERT_RULES ||--o{ SYSTEM_ALERTS : "triggers"